stderr
Hiker.java:7: error: illegal start of expression
        return new Arraylist({1});
                             ^
Hiker.java:7: error: illegal start of type
        return new Arraylist({1});
                              ^
Hiker.java:7: error: ';' expected
        return new Arraylist({1});
                                ^
3 errors
